Update puzzle styling to attempt to prevent puzzles from not showing properly on people's devices

--- a/src/app/puzzle-board/puzzle-board.component.css
+++ b/src/app/puzzle-board/puzzle-board.component.css
@@ -1,23 +1,40 @@
+ :host {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 300px;
+  min-height: 300px;
+  width: 100%;
+  height: 100%;
+} 
+
 .game-board {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .game-row {
   display: flex;
+  flex: 1;
 }
 
 .game-cell {
-  width: 50px;
-  height: 50px;
+  /* flex: 1; */
+  display: flex;
+  flex: 1;
   border: 1px solid #ccc;
   text-align: center;
   vertical-align: middle;
+  position: relative;
+  min-width: 5px; /* Add a minimum width for the cell */
+  min-height: 5px; /* Add a minimum height for the cell */
 }
 
 .obstacle {
-  background-color: rgb(94, 92, 92);
-}  
+  background-color: rgb(0, 0, 0);
+}
 
 .visited {
   background-color: lightgreen;
@@ -29,13 +46,4 @@
 
 .player {
   background-color: red;
-}
-
-:host {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 100%;
-  max-height: calc(100vh - 100px); /* Adjust this value to accommodate the Moves counter and other elements */
-  aspect-ratio: 1 / 1; /* Change the aspect ratio if needed */
 }
